# sunspot

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SPEC.md  pyproject.toml
.github/: AGENTS.md  README.md
.github/workflows/: ci.yml
docs/: AGENTS.md  README.md  configuration.md  large_cohort.md
docs/api/: align.md  cli.md  cohort.md  correlate.md  datasets.md  github.md  logutil.md  stats.md  tables.md  viz.md
docs/measures/: AGENTS.md  README.md  ap.md  dst.md  f107.md  ssn.md
docs/methods/: AGENTS.md  README.md  correlation.md  mutual_information.md  regression.md  time_lag.md
output/: AGENTS.md  README.md  cohort_1000_logins.txt  cohort_smoke_4.txt
output/_logs/: _summary.txt
output/github_data/: README.md
report/: AGENTS.md  README.md
report/docxology/: report.json
src/: AGENTS.md  README.md
src/sunspot/: AGENTS.md  README.md  __init__.py  cli.py  cohort.py  cohort_presets.py  config.py  correlate.py  logutil.py  tables.py
tests/: AGENTS.md  README.md  test_align.py  test_cli_defaults.py  test_cohort_distribution_plot.py  test_cohort_offline.py  test_config.py  test_correlate_offline.py  test_datasets_cache.py  test_github_client_cache.py  test_github_model.py  test_information.py  test_integration_network.py  test_logging.py  test_mosaic.py  test_noaa_parse.py  test_omni_parse.py  test_silso_parse.py  test_spectral.py  test_stats.py  test_stats_deeper.py  test_stats_extras.py  test_stats_primitives.py  test_style_and_new_plots.py  test_tables.py  test_viz.py  test_viz_extras.py
tests/fixtures/: cohort_logins.txt  github_commit.json  (+2 more)
(+11440 files in other folders)
