[project]
name = "sunspot"
version = "0.1.0"
description = "Correlate GitHub commit history with sunspot, solar, and geomagnetic/ionospheric proxy time series"
readme = "README.md"
authors = [
    { name = "Daniel Ari Friedman", email = "danielarifriedman@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "python-dateutil>=2.9.0.post0",
    "scipy>=1.17.1",
    "typer>=0.24.2",
]

[project.scripts]
sunspot = "sunspot.cli:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires network or GitHub API token",
]
